--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="./style.css">
-    <script src="./main.js" async></script>
+    <script src="./main.js" defer></script>
 </head>
 <body>
+    <h1>Choose either rock, paper or scissors!</h1>
+    <div class="buttons">
+        <button id="rock">rock</button>
+        <button id="paper">paper</button>
+        <button id="scissors">scissors</button>
+    </div>
     
+
 </body>
 </html>
