modified playround to display the score dynamically on webpage

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <button id="scissors">scissors</button>
     </div>
     
+    <div class="results">
+        <h1 >Human score : <span id="humanscore">0</span></h1>
+        <h1 >Computer score : <span id="computerscore">0</span></h1>
+    </div>
 
 </body>
 </html>
