fixed a bug where result would display multiple paragraphs instead of updating the result

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div class="results">
         <h1 >Human score : <span id="humanscore">0</span></h1>
         <h1 >Computer score : <span id="computerscore">0</span></h1>
+        <p id ='result'></p>
     </div>
 
 </body>
